--- a/src/Utils/Sass/about.scss
+++ b/src/Utils/Sass/about.scss
@@ -3,10 +3,10 @@
 .visible    { opacity: 1; transform: translateY(-100px) !important;} 
 .invisible  { opacity: 0;}
 
-#About  { width: 80%; height: fit-content; margin-top: 60px; padding-bottom: 100px; font-family: Inter; transition: 1.5s !important; transform: translateY(100px);
+#About  { width: 80%; height: fit-content; margin: 0 auto; margin-top: 60px; padding-bottom: 100px; font-family: Inter; transition: 1.5s !important; transform: translateY(100px);
           #AboutAnchor  { width: fit-content; height: 35px; border-radius: 1000px; border: 1px solid $Grey; @include centerRow; padding: 0 20px;
                           svg { margin: 0 10px 0 0; width: 15px;}
                           p   { color: aliceblue; font-size: 16px; font-family: InterLight; margin: 0;}
                         }
-          #AboutText    { font-family: InterLight; font-size: 20px; color: $Grey; margin-top: 70px; width: 80%;}
+          #AboutText    { font-family: InterLight; font-size: 20px; color: $Grey; margin-top: 70px; width: 100%;}
         }
