--- a/src/Utils/Sass/about.scss
+++ b/src/Utils/Sass/about.scss
@@ -4,9 +4,9 @@
 .invisible  { opacity: 0;}
 
 #About  { width: 80%; height: fit-content; margin: 0 auto; margin-top: 60px; padding-bottom: 100px; font-family: Inter; transition: 1.5s !important; transform: translateY(100px);
-          #AboutAnchor  { width: fit-content; height: 35px; border-radius: 1000px; border: 1px solid $Grey; @include centerRow; padding: 0 20px;
+          #AboutAnchor  { width: fit-content; height: 35px; border-radius: 1000px; border: 1px solid var(--text2); @include centerRow; padding: 0 20px;
                           svg { margin: 0 10px 0 0; width: 15px;}
-                          p   { color: aliceblue; font-size: 16px; font-family: InterLight; margin: 0;}
+                          p   { color: var(--text1); font-size: 16px; font-family: InterLight; margin: 0;}
                         }
-          #AboutText    { font-family: InterLight; font-size: 20px; color: $Grey; margin-top: 70px; width: 100%;}
+          #AboutText    { font-family: InterLight; font-size: 20px; color: var(--text2); margin-top: 70px; width: 100%;}
         }
