--- a/src/Utils/Sass/contact.scss
+++ b/src/Utils/Sass/contact.scss
@@ -7,49 +7,49 @@
 .display    { display: flex !important;}
 
 #Contact  { width: 80%; height: fit-content; margin-top: 60px; padding-bottom: 100px; font-family: Inter; transition: 1.5s !important; transform: translateY(100px);
-            #ContactAnchor  { width: fit-content; height: 35px; border-radius: 1000px; border: 1px solid $Grey; @include centerRow; padding: 0 20px; margin-bottom: 35px;
+            #ContactAnchor  { width: fit-content; height: 35px; border-radius: 1000px; border: 1px solid var(--text2); @include centerRow; padding: 0 20px; margin-bottom: 35px;
                               svg { margin: 0 10px 0 0; width: 15px;}
-                              p   { color: aliceblue; font-size: 16px; font-family: InterLight; margin: 0;}
+                              p   { color: var(--text1); font-size: 16px; font-family: InterLight; margin: 0;}
                             }
-            #Confirm  { width: 85%; height: 650px; background: var(--custom-color); position: absolute; z-index: 1000; border-radius: 30px; @include centerRow; opacity: 0; display: none;
-                        p { font-family: Inter; font-size: 50px; color: #1B1B19;}
+            #Confirm  { width: 85%; height: 650px; background: var(--active); position: absolute; z-index: 1000; border-radius: 30px; @include centerRow; opacity: 0; display: none;
+                        p { font-family: Inter; font-size: 50px; color: var(--back);}
                       }
             #ContactTitle { width: 100%; height: 70px; margin-bottom: 25px; @include centerRow; justify-content: flex-start;
-                            p { font-family: InterLight; font-size: 40px; color: aliceblue; margin-right: 20px;
-                                span  { color: var(--custom-color);}
+                            p { font-family: InterLight; font-size: 40px; color: var(--text1); margin-right: 20px;
+                                span  { color: var(--active);}
                               }
                           }
             #ContactForm  { width: 100%; height: 500px; display: flex; flex-wrap: wrap;
                             #Inputs { width: 100%; height: fit-content; display: flex; flex-wrap: wrap; justify-content: space-between;
                                       .ContactInput { width: 48%; height: 70px; margin: 35px 0;
-                                                      label { width: 100%; height: 40%; font-size: 16px; color: aliceblue; @include centerRow; justify-content: flex-start;
+                                                      label { width: 100%; height: 40%; font-size: 16px; color: var(--text1); @include centerRow; justify-content: flex-start;
                                                               span  {color: #ff4400;}
                                                               &:hover { cursor: pointer;}
                                                             }
-                                                      input { width: 99%; height: 60%; outline: none; background: transparent; border: none; border-bottom: 2px solid transparent; color: $Grey; font-family: InterLight; font-size: 20px;
-                                                              &::placeholder  { color: $Grey; transition: .5s;}
-                                                              &:hover { border-bottom: 2px solid var(--custom-color); color: var(--custom-color);
-                                                                        &::placeholder  { color: var(--custom-color);}
+                                                      input { width: 99%; height: 60%; outline: none; background: transparent; border: none; border-bottom: 2px solid transparent; color: var(--text2); font-family: InterLight; font-size: 20px;
+                                                              &::placeholder  { color: var(--text2); transition: .5s;}
+                                                              &:hover { border-bottom: 2px solid var(--active); color: var(--active);
+                                                                        &::placeholder  { color: var(--active);}
                                                                       }
-                                                              &:focus { border-bottom: 2px solid var(--custom-color); color: var(--custom-color);
-                                                                        &::placeholder  { color: var(--custom-color);}
+                                                              &:focus { border-bottom: 2px solid var(--active); color: var(--active);
+                                                                        &::placeholder  { color: var(--active);}
                                                                       }
                                                             }
-                                                      textarea  { width: 99%; height: 100px; resize: none; outline: none; background: transparent; border: none; color: $Grey; font-family: InterLight; font-size: 20px;
-                                                                  &::placeholder  { color: $Grey; transition: .5s;}
-                                                                  &:hover { color: var(--custom-color);
-                                                                            &::placeholder  { color: var(--custom-color);}
+                                                      textarea  { width: 99%; height: 100px; resize: none; outline: none; background: transparent; border: none; color: var(--text2); font-family: InterLight; font-size: 20px;
+                                                                  &::placeholder  { color: var(--text2); transition: .5s;}
+                                                                  &:hover { color: var(--active);
+                                                                            &::placeholder  { color: var(--active);}
                                                                           }
-                                                                  &:focus { color: var(--custom-color);
-                                                                            &::placeholder  { color: var(--custom-color);}
+                                                                  &:focus { color: var(--active);
+                                                                            &::placeholder  { color: var(--active);}
                                                                           }
                                                                 }
                                                     }
                                       .Message  { width: 100%;}
                                       .Warning  { font-family: Inter; font-size: 12px; color: #ff4400; opacity: 0;}
                                     }
-                            button  { width: fit-content; height: fit-content; padding: 10px 30px; background: var(--custom-color); border: 2px solid var(--custom-color); border-radius: 1000px; font-family: InterBold; font-size: 18px; margin-left: 50px; margin-top: 70px;
-                                      &:hover { background: none; color: var(--custom-color); cursor: pointer;}
+                            button  { width: fit-content; height: fit-content; padding: 10px 30px; background: var(--active); border: 2px solid var(--active); border-radius: 1000px; font-family: InterBold; font-size: 18px; margin-left: 50px; margin-top: 70px;
+                                      &:hover { background: none; color: var(--active); cursor: pointer;}
                                     }
                           }
           }
