--- a/src/Utils/Sass/resume.scss
+++ b/src/Utils/Sass/resume.scss
@@ -4,32 +4,32 @@
 .invisible  { opacity: 0;}
 
 #Resume   { width: 80%; height: fit-content; margin-top: 60px; padding-bottom: 30px; font-family: Inter; transition: 1.5s !important; transform: translateY(100px);
-            #ResumeAnchor   { width: fit-content; height: 35px; border-radius: 1000px; border: 1px solid $Grey; @include centerRow; padding: 0 20px; margin-bottom: 35px;
+            #ResumeAnchor   { width: fit-content; height: 35px; border-radius: 1000px; border: 1px solid var(--text2); @include centerRow; padding: 0 20px; margin-bottom: 35px;
                               svg { margin: 0 10px 0 0; width: 15px;}
-                              p   { color: aliceblue; font-size: 16px; font-family: InterLight; margin: 0;}
+                              p   { color: var(--text1); font-size: 16px; font-family: InterLight; margin: 0;}
                             }
             #ResumeTitle  { width: 100%; height: 70px; margin-bottom: 25px; @include centerRow; justify-content: flex-start;
-                            p { font-family: InterLight; font-size: 40px; color: aliceblue; margin-right: 20px;
-                                span  { color: var(--custom-color);}
+                            p { font-family: InterLight; font-size: 40px; color: var(--text1); margin-right: 20px;
+                                span  { color: var(--active);}
                               }
-                            #DLButton { width: fit-content; height: 35px; padding: 0 20px; background: var(--custom-color); @include centerRow; font-family: InterBold; font-size: 20px; color: #1B1B19; border-radius: 1000px; border: 2px solid var(--custom-color);
+                            #DLButton { width: fit-content; height: 35px; padding: 0 20px; background: var(--active); @include centerRow; font-family: InterBold; font-size: 20px; color: var(--back); border-radius: 1000px; border: 2px solid var(--active);
                                         svg { height: 40%; width: 25px;}
-                                        &:hover { background: transparent; color: var(--custom-color); cursor: pointer;
+                                        &:hover { background: transparent; color: var(--active); cursor: pointer;
                                                   svg { 
-                                                    path  { fill: var(--custom-color);}
+                                                    path  { fill: var(--active);}
                                                   }
                                                 }
                                       }
                           }
             .Timestamp  { width: 95%; height: 100px; margin: auto; @include centerCol; justify-content: flex-start;
-                          &::before { content: ''; background: $Grey; width: 13px; height: 13px; border-radius: 100px; position: absolute; left: 1%; margin-top: 9px;}
-                          &::after  { content: ''; background: $Grey; width: 1px; height: 100px; position: absolute; left: 1.8%; margin-top: 15px;}       
-                          .TimestampDate    { width: 90%; height: 30%; @include centerRow; justify-content: flex-start; font-family: Inter; color: $Grey; font-size: 16px;}
-                          .TimestampTitle   { width: 90%; height: 40%; @include centerRow; justify-content: flex-start; font-family: Inter; color: aliceblue; font-size: 18px;
+                          &::before { content: ''; background: var(--text2); width: 13px; height: 13px; border-radius: 100px; position: absolute; left: 1%; margin-top: 9px;}
+                          &::after  { content: ''; background: var(--text2); width: 1px; height: 100px; position: absolute; left: 1.8%; margin-top: 15px;}       
+                          .TimestampDate    { width: 90%; height: 30%; @include centerRow; justify-content: flex-start; font-family: Inter; color: var(--text2); font-size: 16px;}
+                          .TimestampTitle   { width: 90%; height: 40%; @include centerRow; justify-content: flex-start; font-family: Inter; color: var(--text1); font-size: 18px;
                                               span  { font-size: 12px;}
-                                              .exp  { color: var(--custom-color);}
+                                              // .exp  { color: var(--active);}
                                             }
-                          .TimestampCorp    { width: 90%; height: 20%; @include centerRow; align-items: flex-start; justify-content: flex-start; font-family: Inter; color: $Grey; font-size: 12px;
+                          .TimestampCorp    { width: 90%; height: 20%; @include centerRow; align-items: flex-start; justify-content: flex-start; font-family: Inter; color: var(--active); font-size: 12px;
                                               p { margin-top: 5px;}
                                             }
                         }
